ManageCart_BLService:: minor changes after testing